--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,47 @@
 spring.application.name=project-manager-multi-tenant-back
+
+# Datasource H2 (in-memory)
+spring.datasource.url=jdbc:h2:mem:project_manager_multi_tenant;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MySQL
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JPA/Hibernate (dev : schema auto-update)
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Console H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+spring.main.banner-mode=off
+spring.main.allow-bean-definition-overriding=true
+
+# Jackson
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+
+# Uploads
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
+
+# Static resources
+spring.web.resources.add-mappings=true
+
+# Server
+server.port=8081
+server.forward-headers-strategy=framework
+
+# Logging commun
+logging.level.root=INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate.SQL=WARN
+
+# Swagger / Springdoc (activé par défaut, on pourra désactiver en prod)
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+
+# JPA réglages communs
+spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+spring.profiles.active=dev
