--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,6 +5,9 @@ spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.pool-name=HikariDev
 
+# Actuator très ouvert en dev
+management.endpoints.web.exposure.include=*
+
 # JPA/Hibernate (dev : schema auto-update)
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
