--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,10 +5,17 @@ spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.pool-name=HikariDev
 
+# JPA/Hibernate (dev : schema auto-update)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 # Actuator très ouvert en dev
 management.endpoints.web.exposure.include=*
 
-# JPA/Hibernate (dev : schema auto-update)
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
+# CORS pour Angular local
+#app.cors.allowed-origins=http://localhost:4200
 
+# Logging plus verbeux en dev
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
