--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,4 @@
 spring.application.name=project-manager-multi-tenant-back
-
-# Datasource H2 (in-memory)
-spring.datasource.url=jdbc:h2:mem:project_manager_multi_tenant;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MySQL
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-
-# JPA/Hibernate (dev : schema auto-update)
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-# Console H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
 spring.main.banner-mode=off
 spring.main.allow-bean-definition-overriding=true
 
@@ -35,13 +20,47 @@ server.forward-headers-strategy=framework
 logging.level.root=INFO
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate.SQL=WARN
+logging.file.name=logs/app.log
+
+# Actuator (minimal en commun)
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=when_authorized
 
 # Swagger / Springdoc (activé par défaut, on pourra désactiver en prod)
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 
+# Sécurité/JWT (secret sur variable d?env en prod)
+app.security.jwt.issuer=my-app
+app.security.jwt.secret=${APP_JWT_SECRET:dev-secret-change-me}
+app.security.jwt.expiration=86400
+
+# CORS (défaut vide ici ; profils dev/prod surchargent)
+app.cors.allowed-origins=
+app.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS,PATCH
+app.cors.allowed-headers=*
+app.cors.allow-credentials=true
+
 # JPA réglages communs
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+
+app.jwt.secret-base64=hSV0DzWxA3eaeVeUMZfRcaUZtXq9RC2QM2kKa4uscYc=
+app.jwt.ttl-seconds=86400
+
+# Datasource H2 (in-memory)
+spring.datasource.url=jdbc:h2:mem:project_manager_multi_tenant;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MySQL
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JPA/Hibernate (dev : schema auto-update)
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Console H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 spring.profiles.active=dev
