--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,3 @@
-# JPA/Hibernate (prod : pas de modif schéma)
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=false
-
 # Hikari (pool)
 spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.minimum-idle=4
@@ -10,6 +5,10 @@ spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.pool-name=HikariProd
 
+# JPA/Hibernate (prod : pas de modif schéma)
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 
 # Port (si besoin d?override en PaaS)
 server.port=${PORT:8080}
@@ -18,4 +17,9 @@ server.port=${PORT:8080}
 springdoc.api-docs.enabled=${SWAGGER_ENABLED:false}
 springdoc.swagger-ui.enabled=${SWAGGER_ENABLED:false}
 
+# CORS (domaine(s) front en prod)
+app.cors.allowed-origins=${ALLOWED_ORIGINS:https://app.example.com}
 
+# Logging prod
+logging.level.root=INFO
+logging.file.name=${LOG_FILE:logs/app.log}
